{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 19,
  "lineage": "11eada4f-214b-f4ac-8a05-da21d17624af",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:346732036443:vpc/vpc-03b4eda09be71f1f1",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-06ed810c31cca28ad",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0c19b0a70eb38d3aa",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03b4eda09be71f1f1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00b1bd06c5e9f04f0",
            "owner_id": "346732036443",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "admin_reports",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0724302e25d16f8f2",
            "arn": "arn:aws:ec2:us-east-1:346732036443:instance/i-08f375bc8d110f409",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08f375bc8d110f409",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "sibu-prod-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0cfec69de0c41c9a7"
              }
            ],
            "primary_network_interface_id": "eni-0cfec69de0c41c9a7",
            "private_dns": "ip-172-31-11-146.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.11.146",
            "public_dns": "ec2-13-223-88-210.compute-1.amazonaws.com",
            "public_ip": "13.223.88.210",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0757b8fcccf00cbb4",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sibu-prod-sg1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c9b4af62d0fe6c35",
            "tags": {
              "Name": "sibu-prod-admin-reports"
            },
            "tags_all": {
              "Name": "sibu-prod-admin-reports"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fdd0865ca26ac540"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "346732036443",
            "id": "i-08f375bc8d110f409",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_instance.data",
            "aws_key_pair.qa_sibu",
            "aws_security_group.bastion_sg",
            "aws_security_group.sibu_sg",
            "data.aws_ami.al2023",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "appointments",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0724302e25d16f8f2",
            "arn": "arn:aws:ec2:us-east-1:346732036443:instance/i-08d9964f9ad0de4e8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08d9964f9ad0de4e8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "sibu-prod-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0806fecdb144dfbef"
              }
            ],
            "primary_network_interface_id": "eni-0806fecdb144dfbef",
            "private_dns": "ip-172-31-6-244.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.6.244",
            "public_dns": "ec2-13-219-248-24.compute-1.amazonaws.com",
            "public_ip": "13.219.248.24",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a9a238464a5607be",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sibu-prod-sg1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c9b4af62d0fe6c35",
            "tags": {
              "Name": "sibu-prod-appointments"
            },
            "tags_all": {
              "Name": "sibu-prod-appointments"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fdd0865ca26ac540"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "346732036443",
            "id": "i-08d9964f9ad0de4e8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_instance.data",
            "aws_key_pair.qa_sibu",
            "aws_security_group.bastion_sg",
            "aws_security_group.sibu_sg",
            "data.aws_ami.al2023",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "audit",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0724302e25d16f8f2",
            "arn": "arn:aws:ec2:us-east-1:346732036443:instance/i-0b03055f10d81d041",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b03055f10d81d041",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "sibu-prod-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-077c7370ee094c5e3"
              }
            ],
            "primary_network_interface_id": "eni-077c7370ee094c5e3",
            "private_dns": "ip-172-31-3-90.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.3.90",
            "public_dns": "ec2-98-92-142-46.compute-1.amazonaws.com",
            "public_ip": "98.92.142.46",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e0603be01bcd1f1a",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sibu-prod-sg1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c9b4af62d0fe6c35",
            "tags": {
              "Name": "sibu-prod-audit"
            },
            "tags_all": {
              "Name": "sibu-prod-audit"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fdd0865ca26ac540"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "346732036443",
            "id": "i-0b03055f10d81d041",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_instance.data",
            "aws_key_pair.qa_sibu",
            "aws_security_group.bastion_sg",
            "aws_security_group.sibu_sg",
            "data.aws_ami.al2023",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "authUsers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0724302e25d16f8f2",
            "arn": "arn:aws:ec2:us-east-1:346732036443:instance/i-05cd3c74edf72b86b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05cd3c74edf72b86b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "sibu-prod-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f8be244e76aa46f1"
              }
            ],
            "primary_network_interface_id": "eni-0f8be244e76aa46f1",
            "private_dns": "ip-172-31-13-160.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.13.160",
            "public_dns": "ec2-100-48-221-13.compute-1.amazonaws.com",
            "public_ip": "100.48.221.13",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07b282f1c51085701",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sibu-prod-sg1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c9b4af62d0fe6c35",
            "tags": {
              "Name": "sibu-prod-authUsers"
            },
            "tags_all": {
              "Name": "sibu-prod-authUsers"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fdd0865ca26ac540"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "346732036443",
            "id": "i-05cd3c74edf72b86b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_instance.data",
            "aws_key_pair.qa_sibu",
            "aws_security_group.bastion_sg",
            "aws_security_group.sibu_sg",
            "data.aws_ami.al2023",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0724302e25d16f8f2",
            "arn": "arn:aws:ec2:us-east-1:346732036443:instance/i-0bc59442eb87f555d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bc59442eb87f555d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "sibu-prod-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0978d666b829ad334"
              }
            ],
            "primary_network_interface_id": "eni-0978d666b829ad334",
            "private_dns": "ip-172-31-2-183.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.2.183",
            "public_dns": "ec2-35-168-32-79.compute-1.amazonaws.com",
            "public_ip": "35.168.32.79",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-030ddac6b6b8ae467",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sibu-prod-bastion-sg1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c9b4af62d0fe6c35",
            "tags": {
              "Name": "sibu-prod-bastion"
            },
            "tags_all": {
              "Name": "sibu-prod-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a795234749b347d1"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "346732036443",
            "id": "i-0bc59442eb87f555d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.qa_sibu",
            "aws_security_group.bastion_sg",
            "data.aws_ami.al2023",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cases",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0724302e25d16f8f2",
            "arn": "arn:aws:ec2:us-east-1:346732036443:instance/i-00732b58f65b3f228",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00732b58f65b3f228",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "sibu-prod-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-08676b6bfac6066de"
              }
            ],
            "primary_network_interface_id": "eni-08676b6bfac6066de",
            "private_dns": "ip-172-31-15-86.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.15.86",
            "public_dns": "ec2-3-237-180-82.compute-1.amazonaws.com",
            "public_ip": "3.237.180.82",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0702706669b246b78",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sibu-prod-sg1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c9b4af62d0fe6c35",
            "tags": {
              "Name": "sibu-prod-cases"
            },
            "tags_all": {
              "Name": "sibu-prod-cases"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fdd0865ca26ac540"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "346732036443",
            "id": "i-00732b58f65b3f228",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_instance.data",
            "aws_key_pair.qa_sibu",
            "aws_security_group.bastion_sg",
            "aws_security_group.sibu_sg",
            "data.aws_ami.al2023",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0724302e25d16f8f2",
            "arn": "arn:aws:ec2:us-east-1:346732036443:instance/i-04e87914bf843d5a8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04e87914bf843d5a8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "sibu-prod-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02bce054829d48a54"
              }
            ],
            "primary_network_interface_id": "eni-02bce054829d48a54",
            "private_dns": "ip-172-31-8-68.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.8.68",
            "public_dns": "ec2-3-218-244-97.compute-1.amazonaws.com",
            "public_ip": "3.218.244.97",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06f5d8be8fe02d9e5",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sibu-prod-sg1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c9b4af62d0fe6c35",
            "tags": {
              "Name": "sibu-prod-data"
            },
            "tags_all": {
              "Name": "sibu-prod-data"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fdd0865ca26ac540"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "346732036443",
            "id": "i-04e87914bf843d5a8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.qa_sibu",
            "aws_security_group.bastion_sg",
            "aws_security_group.sibu_sg",
            "data.aws_ami.al2023",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "notifications",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0724302e25d16f8f2",
            "arn": "arn:aws:ec2:us-east-1:346732036443:instance/i-0a17328348721fcf5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a17328348721fcf5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "sibu-prod-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0fc21c6e125051bd5"
              }
            ],
            "primary_network_interface_id": "eni-0fc21c6e125051bd5",
            "private_dns": "ip-172-31-12-214.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.12.214",
            "public_dns": "ec2-3-218-249-252.compute-1.amazonaws.com",
            "public_ip": "3.218.249.252",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b6a5262265258da9",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sibu-prod-sg1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c9b4af62d0fe6c35",
            "tags": {
              "Name": "sibu-prod-insurance"
            },
            "tags_all": {
              "Name": "sibu-prod-insurance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fdd0865ca26ac540"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "346732036443",
            "id": "i-0a17328348721fcf5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_instance.data",
            "aws_key_pair.qa_sibu",
            "aws_security_group.bastion_sg",
            "aws_security_group.sibu_sg",
            "data.aws_ami.al2023",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:346732036443:loadbalancer/app/sibu-prod-frontend-alb/e7c36a3c00cd03a8",
            "arn_suffix": "app/sibu-prod-frontend-alb/e7c36a3c00cd03a8",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "sibu-prod-frontend-alb-1341157803.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:346732036443:loadbalancer/app/sibu-prod-frontend-alb/e7c36a3c00cd03a8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sibu-prod-frontend-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-053f59dd77ecfdc4e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b825ca267f182227"
              },
              {
                "subnet_id": "subnet-0c9b4af62d0fe6c35"
              }
            ],
            "subnets": [
              "subnet-0b825ca267f182227",
              "subnet-0c9b4af62d0fe6c35"
            ],
            "tags": {
              "Name": "sibu-prod-frontend-alb"
            },
            "tags_all": {
              "Name": "sibu-prod-frontend-alb"
            },
            "vpc_id": "vpc-03b4eda09be71f1f1",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:346732036443:loadbalancer/app/sibu-prod-frontend-alb/e7c36a3c00cd03a8"
          },
          "dependencies": [
            "aws_security_group.alb_frontend_sg",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:346732036443:listener/app/sibu-prod-frontend-alb/e7c36a3c00cd03a8/1491889761b4bc9c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:346732036443:targetgroup/sibu-prod-frontend-tg/4bee91f4d72c9593",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:346732036443:listener/app/sibu-prod-frontend-alb/e7c36a3c00cd03a8/1491889761b4bc9c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:346732036443:loadbalancer/app/sibu-prod-frontend-alb/e7c36a3c00cd03a8",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:346732036443:listener/app/sibu-prod-frontend-alb/e7c36a3c00cd03a8/1491889761b4bc9c"
          },
          "dependencies": [
            "aws_lb.frontend",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb_frontend_sg",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:346732036443:targetgroup/sibu-prod-frontend-tg/4bee91f4d72c9593",
            "arn_suffix": "targetgroup/sibu-prod-frontend-tg/4bee91f4d72c9593",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:346732036443:targetgroup/sibu-prod-frontend-tg/4bee91f4d72c9593",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "sibu-prod-frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "sibu-prod-frontend-tg"
            },
            "tags_all": {
              "Name": "sibu-prod-frontend-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03b4eda09be71f1f1"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:346732036443:targetgroup/sibu-prod-frontend-tg/4bee91f4d72c9593"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_frontend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:346732036443:security-group/sg-053f59dd77ecfdc4e",
            "description": "ALB SG for sibu-prod frontend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-053f59dd77ecfdc4e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sibu-prod-alb-frontend-sg",
            "name_prefix": "",
            "owner_id": "346732036443",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sibu-prod-alb-frontend-sg"
            },
            "tags_all": {
              "Name": "sibu-prod-alb-frontend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b4eda09be71f1f1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "346732036443",
            "id": "sg-053f59dd77ecfdc4e",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:346732036443:security-group/sg-0a795234749b347d1",
            "description": "SIBU QA Bastion SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a795234749b347d1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sibu-prod-bastion-sg1",
            "name_prefix": "",
            "owner_id": "346732036443",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sibu-prod-bastion-sg"
            },
            "tags_all": {
              "Name": "sibu-prod-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b4eda09be71f1f1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "346732036443",
            "id": "sg-0a795234749b347d1",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:346732036443:security-group/sg-01eccc9e3d425e281",
            "description": "Frontend SG for sibu-prod (only from ALB)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01eccc9e3d425e281",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a795234749b347d1"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-053f59dd77ecfdc4e"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sibu-prod-frontend-sg1",
            "name_prefix": "",
            "owner_id": "346732036443",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sibu-prod-frontend-sg"
            },
            "tags_all": {
              "Name": "sibu-prod-frontend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b4eda09be71f1f1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "346732036443",
            "id": "sg-01eccc9e3d425e281",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_frontend_sg",
            "aws_security_group.bastion_sg",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sibu_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:346732036443:security-group/sg-0fdd0865ca26ac540",
            "description": "SIBU QA SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fdd0865ca26ac540",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 15672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 15672
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5672
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8010
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": 2181,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2181
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": 29092,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 29092
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              },
              {
                "cidr_blocks": [],
                "description": "SSH only via bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a795234749b347d1"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sibu-prod-sg1",
            "name_prefix": "",
            "owner_id": "346732036443",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sibu-prod-sg"
            },
            "tags_all": {
              "Name": "sibu-prod-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b4eda09be71f1f1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "346732036443",
            "id": "sg-0fdd0865ca26ac540",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}